deviseの導入完了

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
       <%= render 'shared/sidebar' %>
       <main>
         <div class="main-wrapper">
+          <%= render 'shared/toast' %>
           <%= yield %>
           <%= render 'shared/footer' %>
         </div>
