--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -10,7 +10,7 @@
       <div class="sideBar-item-title">UserIconとUserName</div>
       <div class="sideBar-item-element">
         <i class="fas fa-home fa-fw sideBar-item-element-faIcon"></i>
-        <span class="sideBar-item-element-label">ホーム</span>
+        <span class="sideBar-item-element-label"><%= link_to "ホーム", root_path %></span>
       </div>
       <div class="sideBar-item-element">
         <i class="fas fa-user fa-fw sideBar-item-element-faIcon"></i>
