--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,4 +1,4 @@
-<div class="portfolios-index">
+<!-- <div id="portfolios-index"> -->
   <div class="content-wrapper">
     <div class="content-block">
       <% (1..10).each do |i| %>
@@ -33,4 +33,4 @@
       <% end %>
     </div>
   </div>
-</div>
+<!-- </div> -->
