--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,12 +1,9 @@
-<!-- <div id="portfolios-index"> -->
-  <div class="content-wrapper">
+  <div class="portfolios-index-content">
     <div class="content-block">
       <% (1..10).each do |i| %>
         <div class="content">
-          <div class="portfolio-information">
-            <div class="portfolio-image">
-              <%= image_tag "thumbnail.JPG" , class: "portfolio-image-icon" %>
-            </div>
+          <div class="portfolio-image">
+            <%= image_tag "thumbnail.JPG" , class: "portfolio-image-icon" %>
           </div>
           <div class="user-information">
             <div class="user-image">
@@ -33,4 +30,3 @@
       <% end %>
     </div>
   </div>
-<!-- </div> -->
