--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,15 +1,16 @@
-<div class="portfolios-show">
-  <div class="content-wrapper">
+<div class="portfolio-image-movie-block">
+  <div>
+    <%= image_tag "thumbnail.JPG" , class: "portfolio-image-icon" %>
+  </div>
+  <div>
+    <%= image_tag "user.JPG" , class: "user-image-icon" %>
+  </div>
+</div>
+
+<div class="portfolios-show-back-color">
+  <div class="portfolios-show-content">
     <div class="content-block">
       <div class="content">
-        <div class="portfolio-image-movie-block">
-          <div>
-            <%= image_tag "thumbnail.JPG" , class: "portfolio-image-icon" %>
-          </div>
-          <div>
-            <%= image_tag "user.JPG" , class: "user-image-icon" %>
-          </div>
-        </div>
         <div class="portfolio-title">
           作品タイトル
         </div>
