--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,4 +1,5 @@
   <div class="portfolios-index-content">
+    <h2>ポートフォリオ一覧</h2>
     <div class="content-block">
       <% (1..10).each do |i| %>
         <div class="content">
