--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -4,29 +4,23 @@
 
 #portfolios-index {
   .portfolios-index-content {
-    // max-width: 1080px;
-    // margin: 0 auto;
-    // margin-top: 120px;
     max-width: 900px;
     margin: auto;
+    margin-top: 35px;
+
     .content-block {
       display: flex;
       flex-wrap: wrap;
-      // justify-content: space-between;
+
       .content {
-        // border: 1px solid #000;
-        // border-radius: 20px;
-        // margin: 20px 40px;
-        // max-width: 33.3%;
-        // padding: 8px;
         max-width: 33.3%;
         padding: 8px;
+
         .portfolio-image {
           border-radius: 10px 10px 0px 0px;
           background-color: #fdfdfd;
+          
           .portfolio-image-icon {
-            // width: 335px;
-            // border-bottom: 1px solid;
             border-radius: 10px 10px 0px 0px;
           }
         }
@@ -54,7 +48,6 @@
               font-size: 16px;
             }
             .user-name {
-              // font-weight: bold;
               font-size: 14px;
             }
             .posted-date {
@@ -64,6 +57,7 @@
           .favorite {
             padding-top: 19px;
             padding-right: 5px;
+
             .favorite-btn {
               .favorite-icon {}
             }
@@ -76,87 +70,94 @@
 
 #portfolios-show {
   .portfolio-image-movie-block {
-    // max-width: 900px;
     margin: auto;
     padding-top: 50px;
     max-width: 759px;
+
     .portfolio-image-icon {
-      // width: 640px;
-      // height: 360px;
     }
     .user-image-icon {
-      // width: 640px;
-      // height: 360px;
     }
   }
-  .portfolios-show-back-color {
-    // background-color: #fdfdfd;
-    // background-color: rgba(0, 0, 0, 0);
-    .portfolios-show-content {
-      max-width: 900px;
-      margin: auto;
-      .content-block {
-        margin-top: 40px;
-        // text-align: center;
-        .content {
-          // width: 800px;
-          // display: inline-block;
-          // text-align: left;
-          .portfolio-title {
-            font-size: 18px;
+  .portfolios-show-content {
+    max-width: 900px;
+    margin: auto;
+
+    .content-block {
+      margin-top: 40px;
+
+      .content {
+        .portfolio-title {
+          font-size: 18px;
+        }
+        .overview {
+          display: flex;
+          justify-content: space-between;
+
+          .posted-date {
+            font-size: 14px;
           }
-          .overview {
-            display: flex;
-            justify-content: space-between;
-            .posted-date {
-              font-size: 14px;
-            }
-            .favorite {
-              font-size: 13px;
-            }
-          }
-          .sideBar-divider {
-            background-color: gray;
-            height: 1px;
-            width: 100%;
-            opacity: 0.5; // 透明度
-            margin: 16px 0;
-          }
-          .user-information {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            // border-top: 1px solid;
-            // margin: 16px 0;
-  
-            .user-information-image-name {
-              display: flex;
-              align-items: center;
-  
-              .user-image {
-                height: 60px;
-                margin-right: 16px;
-  
-                .user-image-icon {
-                  width: 60px;
-                  object-fit: contain;
-                  border-radius: 35px;
-                }
-              }
-              .user-name {
-                font-size: 16px;
-              }
-            }
-            .portfolio-link {
-              // height: 50px;
-            }
-          }
-          .portfolio-overview {
-            // max-width: 640px;
-            // width: 100%;
+          .favorite {
+            font-size: 13px;
           }
         }
+        .sideBar-divider {
+          background-color: gray;
+          height: 1px;
+          width: 100%;
+          opacity: 0.5; // 透明度
+          margin: 16px 0;
+        }
+        .user-information {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+
+          .user-information-image-name {
+            display: flex;
+            align-items: center;
+
+            .user-image {
+              height: 60px;
+              margin-right: 16px;
+
+              .user-image-icon {
+                width: 60px;
+                object-fit: contain;
+                border-radius: 35px;
+              }
+            }
+            .user-name {
+              font-size: 16px;
+            }
+          }
+          .portfolio-link {
+            // height: 50px;
+          }
+        }
+        .portfolio-overview {
+          // max-width: 640px;
+          // width: 100%;
+        }
       }
+    }
+  }
+}
+
+#portfolios-new {
+  .portfolios-new-content {
+    max-width: 900px;
+    margin: auto;
+    margin-top: 35px;
+    .form-block {
+      display: flex;
+      flex-direction: column;
+      .description {}
+      .description-area {
+        height: 900px;
+        margin-bottom: 20px;
+      }
+      .submit-btn {}
     }
   }
 }
